fixed alignments

--- a/style.css
+++ b/style.css
@@ -35,15 +35,15 @@
 
 .display-score {
   color: rgb(226, 216, 216);
-  /* top: 400px; */
-  /* position: relative; */
+  top: 350px;
+  position: relative;
   /* margin: 1rem; */
   font-size: 2rem;
 }
 
 .display-timer {
-  /* position: absolute; */
-  /* top: 300px; */
+  position: absolute;
+  top: 5rem;
   font-weight: bold;
   font-size: 4rem;
   color: rgb(227, 129, 63);
@@ -59,26 +59,21 @@
 }
 
 .quotebox {
-  /* justify-content: center; */
   font-size: 2.7rem;
   font-weight: bold;
-  /* right: -50px; */
-  /* position: relative; */
-  /* top: 500px;
-  margin: 1rem; */
+  margin-bottom: 1rem;
+  margin-left: calc(4rem + 4px);
+  margin-right: calc(4rem + 4px);
 }
 
 .textbox {
-  /* justify-content: center; */
-  /* width: 220px;
   height: 2rem;
-  border-radius: 1rem; */
-  /* position: relative; */
-  /* right: -10px; */
-  /* top: 500px; */
-  /* margin: 1rem;
-  padding: .7rem 1rem; */
+  border-radius: 1rem;
+  padding: .7rem 1rem;
   font-size: 20px;
+  width: 100%;
+  resize: none;
+  margin: auto;
 }
 
 .container {
@@ -96,14 +91,15 @@
 }
 
 .restartgame {
-  /* margin: 2rem; */
   height: 2rem;
   width: 160px;
-  /* border-radius: 2rem; */
-  /* position: relative; */
-  /* top: 700px; */
+  border-radius: 2rem;
+  position: relative;
+  top: 300px;
   background-color: rgb(229, 144, 230);
   font-size: 1rem;
+  opacity: 80%;
+  border-style: none;
 }
 
 .restartgame:hover {
@@ -161,7 +157,7 @@
   font-size: 25px;
   color: rgb(13, 251, 5);
   position: fixed;
-  top: 700px;
+  top: 760px;
   text-shadow:
     0 0 7px rgba(233, 228, 223, 0.985),
     0 0 10px rgb(220, 214, 208),
